[Step1] refactor: Main(콘솔 앱)에 ReservationDatabase 적용