@@ -16,7 +16,7 @@ public class Main {
 
     public static void main(String[] args) {
         Scanner scanner = new Scanner(System.in);
-        List<Reservation> reservations = new ArrayList<>();
+        final ReservationDatabase reservations = new ReservationDatabase();
 
         while (true) {
             System.out.println("메뉴를 선택하세요.");
@@ -46,7 +46,7 @@ public class Main {
                         name
                 );
 
-                reservations.add(reservation);
+                reservations.save(reservation);
                 System.out.println("예약이 등록되었습니다.");
             }
 
@@ -61,10 +61,7 @@ public class Main {
                 System.out.println("시간 (ex.13:00)");
                 String time = scanner.nextLine();
 
-                reservations.stream()
-                        .filter(it -> Objects.equals(it.getDate(), LocalDate.parse(date)) && Objects.equals(it.getTime(), LocalTime.parse(time + ":00")))
-                        .findFirst()
-                        .ifPresent(reservations::remove);
+                reservations.deleteByDateAndTime(LocalDate.parse(date), LocalTime.parse(time + ":00"));
 
                 System.out.println("예약이 취소되었습니다.");
             }
@@ -79,10 +76,9 @@ public class Main {
 
                 String reservationFormat = "예약ID : %d, 예약 날짜 : %s, 예약 시간 : %s , 예약자 이름 : %s";
 
-                reservations.stream()
-                        .filter(it -> it.getDate().isEqual(LocalDate.parse(date)))
+                reservations.findByDate(LocalDate.parse(date)).stream()
                         .map(it -> String.format(reservationFormat, it.getId(), it.getDate().toString(), it.getTime().toString(), it.getName()))
-                        .collect(Collectors.toList())
+                        .toList()
                         .forEach(System.out::println);
             }
 
